# aether-kernel

./: .gitignore  Cargo.toml
aether-frame/: Cargo.toml
aether-frame/libs/aether-macros/: Cargo.toml
aether-frame/libs/aether-macros/src/: lib.rs
aether-frame/libs/x2apic-rs/src/: lib.rs
aether-frame/libs/x2apic-rs/src/lapic/: builder.rs  mod.rs
aether-frame/src/: executor.rs  lib.rs  preempt.rs  startup.rs  time.rs
aether-frame/src/acpi/: mod.rs
aether-frame/src/arch/x86_64/: cpu.rs  fpu.rs  io.rs  linker.ld  mod.rs  serial.rs
aether-frame/src/arch/x86_64/interrupt/: apic.rs  control.rs  gdt.rs  idt.rs  ioapic.rs  mod.rs  msi.rs  pic.rs  trap.rs
aether-frame/src/arch/x86_64/mm/: mod.rs  paging.rs
aether-frame/src/arch/x86_64/process/: context.rs  exception.rs  mod.rs  run.rs
aether-frame/src/arch/x86_64/timer/: hpet.rs  mod.rs
aether-frame/src/boot/: limine.rs  mod.rs
aether-frame/src/bus/: pci.rs
aether-frame/src/interrupt/: device.rs  dispatch.rs  mod.rs  softirq.rs  timer.rs  trap.rs
aether-frame/src/io/: mmio.rs  mod.rs  pcie.rs  port.rs
aether-frame/src/libs/: mod.rs  mutex.rs  percpu.rs  spin.rs
aether-frame/src/logger/: mod.rs
aether-frame/src/mm/: address.rs  buddy.rs  frame.rs  mapper.rs  mod.rs
aether-frame/src/process/: future.rs  mod.rs  reason.rs
aether-kernel/: Cargo.toml  build.rs
aether-kernel/libs/aether-async/: Cargo.toml
aether-kernel/libs/aether-async/src/: lib.rs
aether-kernel/libs/aether-device/: Cargo.toml
aether-kernel/libs/aether-device/src/: lib.rs
aether-kernel/libs/aether-drivers/: Cargo.toml
aether-kernel/libs/aether-drivers/src/: dma.rs  lib.rs
aether-kernel/libs/aether-drivers/src/block/: mod.rs  partition.rs
aether-kernel/libs/aether-drivers/src/drm/: core.rs  ioctl.rs  mod.rs  plainfb.rs
aether-kernel/libs/aether-drivers/src/i8042/: mod.rs
aether-kernel/libs/aether-drivers/src/input/: codes.rs  mod.rs
aether-kernel/libs/aether-framebuffer/: Cargo.toml
aether-kernel/libs/aether-framebuffer/src/: lib.rs
aether-kernel/libs/aether-fs/: Cargo.toml
aether-kernel/libs/aether-fs/src/: block.rs  lib.rs  pipe.rs  pseudo.rs  runtime_async.rs
aether-kernel/libs/aether-fs/src/ext/: dentry.rs  file.rs  inode.rs  io.rs  mod.rs  mount.rs
aether-kernel/libs/aether-initramfs/: Cargo.toml
aether-kernel/libs/aether-initramfs/src/: lib.rs
aether-kernel/libs/aether-kmsg/: Cargo.toml
aether-kernel/libs/aether-kmsg/src/: lib.rs
aether-kernel/libs/aether-process/: Cargo.toml
aether-kernel/libs/aether-process/src/: image.rs  layout.rs  lib.rs  process.rs
aether-kernel/libs/aether-terminal/: Cargo.toml
aether-kernel/libs/aether-terminal/src/: lib.rs
aether-kernel/libs/aether-tmpfs/: Cargo.toml
aether-kernel/libs/aether-tmpfs/src/: lib.rs
aether-kernel/libs/aether-vfs/: Cargo.toml
aether-kernel/libs/aether-vfs/src/: dentry.rs  epoll.rs  file.rs  inode.rs  lib.rs  node.rs  page_cache.rs  path.rs  superblock.rs  vfs.rs  wait.rs
aether-kernel/src/: credentials.rs  devices.rs  errno.rs  kernfs.rs  lib.rs  log_sinks.rs  main.rs  process.rs  processor.rs  procfs.rs  runtime.rs
aether-kernel/src/arch/: context.rs  exception.rs  mod.rs
aether-kernel/src/arch/x86_64/: exception.rs  mod.rs  signal.rs  syscall.rs
aether-kernel/src/fs/: abi.rs  eventfd.rs  fd.rs  image.rs  inotify.rs  mod.rs  pidfd.rs  pty.rs  shm.rs  timerfd.rs
aether-kernel/src/net/: mod.rs  netlink.rs  unix.rs
aether-kernel/src/process/: clone.rs  itimer.rs  manager.rs  util.rs
aether-kernel/src/process/context/: fd.rs  mod.rs  process.rs  user.rs
aether-kernel/src/rootfs/: filesystem.rs  mod.rs  namespace.rs  path.rs
aether-kernel/src/signal/: abi.rs  core.rs  fd.rs  mod.rs  state.rs
aether-kernel/src/syscall/: abi.rs  mod.rs  registry.rs
aether-kernel/src/syscall/context/: arch.rs  core.rs  fd.rs  fs.rs  memory.rs  mod.rs  process.rs  signal.rs  time.rs  user.rs
aether-kernel/src/syscall/handlers/: mod.rs
aether-kernel/src/syscall/handlers/arch/: arch_prctl.rs  iopl.rs
aether-kernel/src/syscall/handlers/fd/: close.rs  (+36 more)
(+132 files in other folders)
