[package]
name = "aether-frame"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "6.1.1"
good_memory_allocator = "0.1.7"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x2apic = { path = "libs/x2apic-rs" }
x86_64 = "0.15.2"
